deployfolder/objects/KIS_Hard_Drives__c.object
<CustomObject>
    <label>KIS Hard Drives</label>
    <nameField>
        <label>KIS Hard Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KIS Hard Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Hard_Drive_Serial_Number__c</fullName>
        <label>Hard Drive Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDD_Brand__c</fullName>
        <description>Please enter the Brand of the HDD for KIS Inventory.</description>
        <inlineHelpText>Please enter the Brand of the HDD for KIS Inventory.</inlineHelpText>
        <label>HDD Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Buffalo</fullName>
                    <default>true</default>
                    <label>Buffalo</label>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>Iomega</fullName>
                </value>
                <value>
                    <fullName>Lacie</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prestigio</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Seagate</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HD_Capacity_GB__c</fullName>
        <description>The capacity of the HDD entered into Inventory.</description>
        <inlineHelpText>The capacity of the HDD entered into Inventory.</inlineHelpText>
        <label>HD Capacity (GB)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>250 GB</fullName>
                </value>
                <value>
                    <fullName>300 GB</fullName>
                </value>
                <value>
                    <fullName>500 GB</fullName>
                </value>
                <value>
                    <fullName>1000 GB</fullName>
                </value>
                <value>
                    <fullName>2000 GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KIS__c</fullName>
        <description>KIS-(max 7digit auto number) Starts at 100,000</description>
        <formula>(&apos;1&apos; &amp;Right(Id, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>KIS-(max 7digit auto number) Starts at 100,000</inlineHelpText>
        <label>KIS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Decommissioned</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Active_HDD_s</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Hard_Drive_Serial_Number__c</columns>
        <columns>HDD_Brand__c</columns>
        <columns>HD_Capacity_GB__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active HDD&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <group>IrelandCSManagementGroup</group>
            <group>KeepItSafe</group>
            <group>KeepItSafe_US_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>HD_Capacity_GB__c</columns>
        <columns>Notes__c</columns>
        <columns>Hard_Drive_Serial_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All KIS HD&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <group>IrelandCSManagementGroup</group>
            <group>KeepItSafe</group>
            <group>KeepItSafe_US_Group</group>
        </sharedTo>
    </listViews>
</CustomObject>